# meshcore-bot

./: .eslintrc.json  .gitignore  .htmlhintrc  BUGS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  TESTING.md  TODO.md  backup_database.py  config.ini.example  config.ini.minimal-example  config.ini.quickstart  docker-setup.sh  generate_website.py  install-service.sh  meshcore-bot.service  meshcore_bot.py  migrate_webviewer_db.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  restart_viewer.sh  uninstall-service.sh  validate_config.py
.github/workflows/: docker-build.yml  test.yml
data/randomlines/: fortunes.txt
docs/: FEEDS.md  command-reference.md  config-validation.md  configuration.md  data-retention.md  discord-bridge.md  docker.md  faq.md  getting-started.md  index.md  installation.md  packet-capture.md  path-command-config.md  repeater-prefix-collision-service.md  scope-hint-command.md  service-installation.md  service-plugins.md  upgrade.md  web-viewer.md
docs/integration/: kg7qin-pr-integration-log.md
modules/: bridge_outbound.py  channel_manager.py  command_manager.py  config_snapshot.py  config_validation.py  core.py  db_manager.py  db_migrations.py  enums.py  feed_filter_eval.py  feed_manager.py  graph_trace_helper.py  i18n.py  maintenance.py  mesh_graph.py  message_handler.py  models.py  plugin_loader.py  profanity_filter.py  rate_limiter.py  repeater_manager.py  response_template.py  scheduled_message_cron.py  scheduler.py  security_utils.py  service_plugin_loader.py  solar_conditions.py  trace_runner.py  transmission_tracker.py  url_shortener.py  utils.py  version_info.py
modules/clients/: espn_client.py  mqtt_weather.py  sports_mappings.py  thesportsdb_client.py  wxsim_parser.py
modules/commands/: advert_command.py  airplanes_command.py  alert_command.py  announcements_command.py  aqi_command.py  aurora_command.py  base_command.py  catfact_command.py  channelpause_command.py  channels_command.py  cmd_command.py  dadjoke_command.py  dice_command.py  fact_command.py  feed_command.py  greeter_command.py  hacker_command.py  hello_command.py  help_command.py  hfcond_command.py  joke_command.py  magic8_command.py  mention_command.py  moon_command.py  multitest_command.py  password_command.py  path_command.py  pikachu_command.py  ping_command.py  prefix_command.py  reload_command.py  removecontact_command.py  repeater_command.py  roll_command.py  routing_hint_command.py  satpass_command.py  schedule_command.py  scope_hint_command.py  solar_command.py  solarforecast_command.py  (+11 more)
modules/commands/alternatives/: wx_international.py
modules/service_plugins/: base_service.py  darc_mowas_service.py  discord_bridge_service.py  discovery_service.py  earthquake_service.py  map_uploader_service.py  mqtt_weather_service.py  packet_capture_service.py  packet_capture_utils.py  repeater_prefix_collision_service.py  telegram_bridge_service.py  weather_service.py  webhook_service.py
modules/web_viewer/: __init__.py  app.py  config_panels.py  integration.py
modules/web_viewer/templates/: admin_config.html  api_explorer.html  base.html  cache.html  config.html  contacts.html  discovery.html  error.html  feeds.html  greeter.html  index.html  login.html  logs.html  mesh.html  radio.html  realtime.html
scripts/: .log-injection-baseline.txt  build-deb.sh  check-package-data.sh  check_log_injection.py  config_tui.py  context_checkpoint.sh  post_tool_counter.sh  reload_config.sh  update_todos.py
tests/: conftest.py  helpers.py  mqtt_test_config.ini  test_announcements_command.py  test_aurora_command.py  test_base_service_external_notifications.py  test_bridge_bot_responses.py  test_bridge_outbound.py  test_channel_manager.py  test_channel_manager_logic.py  test_channels_command.py  test_checkin_service.py  test_command_manager.py  test_command_prefix.py  test_config_merge.py  test_config_validation.py  test_core.py  test_dadjoke_command.py  test_db_manager.py  test_db_migrations.py  test_discord_bridge_multi_webhooks.py  test_enums.py  test_feed_filter_eval.py  test_feed_manager.py  test_feed_manager_extended.py  test_feed_manager_formatting.py  test_generate_website_randomline.py  test_graph_trace_helper.py  test_hacker_command.py  test_help_command.py  test_i18n.py  test_joke_command.py  test_maintenance.py  test_meshcore_bot_cli.py  test_message_handler.py  test_message_handler_contact_path.py  test_models.py  test_moon_command.py  test_mqtt_live.py  test_multitest_command.py  (+26 more)
tests/commands/: test_base_command.py  test_cmd_command.py  test_dice_command.py  test_hello_command.py  test_help_command.py  test_magic8_command.py  test_ping_command.py  test_roll_command.py  test_version_command.py
tests/fixtures/: mqtt_packets.json
tests/integration/: test_flood_scope_reply.py  test_path_graph_integration.py  test_path_resolution.py  test_rf_scope_correlation.py
tests/regression/: test_keyword_escapes.py
tests/unit/: test_command_path_byte_gating.py  test_darc_mowas.py  test_flood_scope_normalize.py  test_flood_scope_resolve.py  test_log_data_scope_fields.py  test_mention_command.py  test_mesh_graph.py  test_mesh_graph_edges.py  test_mesh_graph_multihop.py  test_mesh_graph_optimizations.py  test_mesh_graph_scoring.py  test_mesh_graph_validation.py  test_mqtt_weather.py  test_packet_capture_log_level.py  test_packet_capture_mqtt_jwt_config.py  test_packet_capture_rf_correlation.py  test_packet_capture_trace_decode.py  test_path_command_graph.py  test_path_command_graph_selection.py  test_path_command_multibyte.py  test_path_command_utf8_message_limits.py  test_public_channel_guard.py  test_response_template.py  test_rf_data_scope_fields.py  test_routing_hint_command.py  test_scope_hint_command.py  test_scope_matching.py  test_temperature_high_low_format.py  test_weather_default_city_fallback.py  test_weather_model_config.py  test_wx_count_display_width.py
translations/: de.json  en-GB.json  en.json  es.json  facts_pl.json  fr-CA.json  fr.json  jokes_pl.json  nl.json  pl.json  pt-BR.json  pt.json
(+7 files in other folders)
